[gd_scene load_steps=16 format=3 uid="uid://dwjb3k1jlfsi5"]

[ext_resource type="Script" uid="uid://5jyfckcplbe2" path="res://Scripts/Game/Game.gd" id="1_0a0c1"]
[ext_resource type="Texture2D" uid="uid://c40em1o7pf4xc" path="res://Sprites/Backgrounds/Space Background.png" id="2_drrmr"]
[ext_resource type="Script" uid="uid://cx4e78qyg2j0s" path="res://Scripts/Game/enemy_spawner.gd" id="2_w0w6r"]
[ext_resource type="PackedScene" uid="uid://c316ek4x22v2p" path="res://scenes/main_menu.tscn" id="3_8mpqd"]
[ext_resource type="PackedScene" uid="uid://cgvw14xt7tjt4" path="res://scenes/Menu/Paused_Menu.tscn" id="4_hy3bo"]
[ext_resource type="FontFile" uid="uid://dh8b3n051ubbv" path="res://Sprites/Fonts/MainFont.TTF" id="5_nt44d"]
[ext_resource type="Texture2D" uid="uid://bha8fh7rexqj0" path="res://Sprites/Buttons/black-red-target_78370-6507.png" id="7_lfncv"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="8_i6kj0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_322ga"]
texture = ExtResource("2_drrmr")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3xcid"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v82ls"]
normal = Vector2(1, 0)
distance = -3.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nepgs"]
normal = Vector2(-0.999898, -0.0142843)
distance = -1152.08

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6w8qg"]
distance = -648.0

[sub_resource type="Theme" id="Theme_m35f2"]
default_font = ExtResource("5_nt44d")

[sub_resource type="Theme" id="Theme_6w0bs"]
default_font = ExtResource("5_nt44d")

[node name="Game" type="Node2D"]
script = ExtResource("1_0a0c1")

[node name="Background" type="Panel" parent="."]
offset_right = 1154.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_322ga")

[node name="MoneteLabel" type="Label" parent="."]
visible = false
offset_right = 61.0
offset_bottom = 23.0
text = "Stelle: 0"

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(578, 0)
shape = SubResource("WorldBoundaryShape2D_3xcid")

[node name="Left" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_v82ls")

[node name="Right" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_nepgs")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
shape = SubResource("WorldBoundaryShape2D_6w8qg")

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(-1, 1)
script = ExtResource("2_w0w6r")

[node name="Timer" type="Timer" parent="EnemySpawner"]
wait_time = 0.5

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="Menu" instance=ExtResource("3_8mpqd")]
visible = false
script = null

[node name="PausedMenu" parent="Menu" instance=ExtResource("4_hy3bo")]
theme = SubResource("Theme_m35f2")

[node name="GameTimer" type="Timer" parent="."]

[node name="TimeLabel" type="Label" parent="GameTimer"]
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_6w0bs")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(894, 421)
scale = Vector2(0.298649, 0.297297)
texture_normal = ExtResource("7_lfncv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Virtual Joystick" parent="CanvasLayer" instance=ExtResource("8_i6kj0")]
offset_left = 111.0
offset_top = -159.0
offset_right = 176.0
offset_bottom = -109.0

[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_timer_timeout"]
